[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/graphics/ships/stations/Space_Station_1.png" type="Texture" id=1]
[ext_resource path="res://src/game/asteroids/LargeAsteroid1.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/Canvas.gd" type="Script" id=3]
[ext_resource path="res://src/game/Projectiles.gd" type="Script" id=4]
[ext_resource path="res://src/game/SpeedLines.gd" type="Script" id=5]
[ext_resource path="res://assets/graphics/PB3.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/PB2.png" type="Texture" id=7]
[ext_resource path="res://src/game/ships/armada/ArmadeAgile.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/game/shells/DefaultShell.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/game/Sun.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/graphics/PB3_2.png" type="Texture" id=11]
[ext_resource path="res://assets/graphics/NEB1.png" type="Texture" id=12]
[ext_resource path="res://src/game/Station.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/game/Planet.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/graphics/planets/earth.png" type="Texture" id=15]
[ext_resource path="res://assets/graphics/planets/mars.png" type="Texture" id=16]
[ext_resource path="res://src/game/asteroids/SmallAsteroid1.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/game/asteroids/SmallAsteroid2.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/game/asteroids/SmallAsteroid3.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/game/asteroids/LargeAsteroid2.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/game/HitEmitter.gd" type="Script" id=21]
[ext_resource path="res://src/game/ships/armada/ArmadaMidclasseRocket.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/game/ships/armada/ArmadaMidclasseProjectile.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/game/IGPS.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/graphics/ships/stations/Space_Station_2.png" type="Texture" id=25]
[ext_resource path="res://assets/graphics/ships/stations/Space_Station_4.png" type="Texture" id=26]
[ext_resource path="res://assets/graphics/ships/stations/Space_Station_5.png" type="Texture" id=27]

[sub_resource type="CircleShape2D" id=1]
radius = 32.3739

[sub_resource type="CircleShape2D" id=2]
radius = 1303.75

[node name="Canvas" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." groups=[
"orbitable",
"ships",
] instance=ExtResource( 9 )]
position = Vector2( -1265.08, 1692.28 )

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true
smoothing_speed = 6.0
drag_margin_bottom = 0.1

[node name="ParallaxBackground" type="ParallaxBackground" parent="Player/PlayerCamera"]

[node name="Space_BG2" type="ParallaxLayer" parent="Player/PlayerCamera/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1000, 600 )

[node name="TextureRect" type="TextureRect" parent="Player/PlayerCamera/ParallaxBackground/Space_BG2"]
margin_left = -30.0
margin_top = -30.0
margin_right = 970.0
margin_bottom = 570.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space_BG3" type="ParallaxLayer" parent="Player/PlayerCamera/ParallaxBackground"]
motion_scale = Vector2( 0.15, 0.15 )
motion_mirroring = Vector2( 1000, 600 )

[node name="TextureRect" type="TextureRect" parent="Player/PlayerCamera/ParallaxBackground/Space_BG3"]
margin_left = -30.0
margin_top = -30.0
margin_right = 970.0
margin_bottom = 570.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space_BG4" type="ParallaxLayer" parent="Player/PlayerCamera/ParallaxBackground"]
motion_scale = Vector2( 0.12, 0.12 )
motion_mirroring = Vector2( 1000, 600 )

[node name="TextureRect" type="TextureRect" parent="Player/PlayerCamera/ParallaxBackground/Space_BG4"]
modulate = Color( 1, 1, 1, 0.431373 )
margin_left = -30.0
margin_top = -30.0
margin_right = 970.0
margin_bottom = 570.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource( 12 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space_BG5" type="ParallaxLayer" parent="Player/PlayerCamera/ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1000, 600 )

[node name="TextureRect" type="TextureRect" parent="Player/PlayerCamera/ParallaxBackground/Space_BG5"]
margin_left = -30.0
margin_top = -30.0
margin_right = 970.0
margin_bottom = 570.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DampedSpringJoint2D" type="DampedSpringJoint2D" parent="Player"]
bias = 0.9
length = 1.0

[node name="Enemies" type="Node2D" parent="."]

[node name="ArmadeAgile" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 8 )]
position = Vector2( -1223.16, -218.883 )

[node name="ArmadeAgile3" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 8 )]
position = Vector2( 755.634, -1108.03 )

[node name="ArmadeAgile4" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 8 )]
position = Vector2( 1793.62, 892.542 )

[node name="ArmadeAgile5" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 8 )]
position = Vector2( 1804.84, 747.744 )

[node name="ArmadeAgile6" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 8 )]
position = Vector2( 1841.88, 793.765 )

[node name="ArmadeAgile7" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 8 )]
position = Vector2( 1351.19, -98.2671 )

[node name="ArmadeAgile2" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 8 )]
position = Vector2( 1292.57, -236.587 )

[node name="ArmadeAgile8" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 22 )]
position = Vector2( 1611.56, -665.085 )

[node name="ArmadeAgile9" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 23 )]
position = Vector2( -1410.03, 429.498 )
rotation = 1.03532

[node name="ArmadeAgile10" parent="Enemies" groups=[
"orbitable",
"ships",
] instance=ExtResource( 23 )]
position = Vector2( 1053.26, -235.799 )
rotation = 1.03532

[node name="Projectiles" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 4 )

[node name="SpeedLines" type="Node2D" parent="."]
position = Vector2( -0.0214844, -1.12845 )
z_index = 3
script = ExtResource( 5 )

[node name="Asteroids" type="Node2D" parent="."]

[node name="LargeAsteroid1" parent="Asteroids" instance=ExtResource( 2 )]
position = Vector2( -129.311, -112.321 )

[node name="SmallAsteroid1" parent="Asteroids" instance=ExtResource( 17 )]
position = Vector2( 179.336, -113.265 )

[node name="SmallAsteroid2" parent="Asteroids" instance=ExtResource( 17 )]
position = Vector2( -161.402, 141.581 )

[node name="SmallAsteroid3" parent="Asteroids" instance=ExtResource( 17 )]
position = Vector2( -91.5557, 249.183 )

[node name="SmallAsteroid4" parent="Asteroids" instance=ExtResource( 18 )]
position = Vector2( 275.611, 52.8569 )

[node name="SmallAsteroid5" parent="Asteroids" instance=ExtResource( 18 )]
position = Vector2( 252.958, -176.505 )

[node name="SmallAsteroid6" parent="Asteroids" instance=ExtResource( 19 )]
position = Vector2( -219.923, 237.856 )

[node name="SmallAsteroid7" parent="Asteroids" instance=ExtResource( 19 )]
position = Vector2( 136.862, -183.112 )

[node name="SmallAsteroid8" parent="Asteroids" instance=ExtResource( 19 )]
position = Vector2( 277.499, -73.6222 )

[node name="SmallAsteroid9" parent="Asteroids" instance=ExtResource( 19 )]
position = Vector2( 193.494, 3.05176e-05 )

[node name="SmallAsteroid10" parent="Asteroids" instance=ExtResource( 19 )]
position = Vector2( -235.025, -86.8364 )

[node name="LargeAsteroid2" parent="Asteroids" instance=ExtResource( 20 )]
position = Vector2( -117.04, 24.5407 )

[node name="Sun" parent="." instance=ExtResource( 10 )]
position = Vector2( -4300, 2500 )

[node name="Stations" type="Node2D" parent="."]

[node name="Station" parent="Stations" instance=ExtResource( 13 )]
position = Vector2( 2224, 1624 )
station_name = "1"

[node name="Sprite" parent="Stations/Station" index="0"]
rotation = 1.57079
texture = ExtResource( 1 )

[node name="DeliveryArea" parent="Stations/Station" index="1"]
position = Vector2( -0.552856, 95.8911 )

[node name="Sprite" parent="Stations/Station/DeliveryArea" index="0"]
texture = null

[node name="CollisionShape2D" parent="Stations/Station/DeliveryArea" index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="AnchorPoint" parent="Stations/Station" index="3"]
position = Vector2( 0.472656, 67.1337 )

[node name="Station2" parent="Stations" instance=ExtResource( 13 )]
position = Vector2( 3887.12, 2161.4 )
station_name = "2"

[node name="Sprite" parent="Stations/Station2" index="0"]
texture = ExtResource( 25 )

[node name="DeliveryArea" parent="Stations/Station2" index="1"]
position = Vector2( -0.213989, 112.651 )

[node name="Sprite" parent="Stations/Station2/DeliveryArea" index="0"]
texture = null

[node name="CollisionShape2D" parent="Stations/Station2/DeliveryArea" index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="AnchorPoint" parent="Stations/Station2" index="3"]
position = Vector2( -1.11646, 79.6592 )

[node name="Station3" parent="Stations" instance=ExtResource( 13 )]
position = Vector2( 1820.84, 3834.58 )
station_name = "3"

[node name="Sprite" parent="Stations/Station3" index="0"]
texture = ExtResource( 25 )

[node name="DeliveryArea" parent="Stations/Station3" index="1"]
position = Vector2( -0.0726318, 111.879 )

[node name="Sprite" parent="Stations/Station3/DeliveryArea" index="0"]
texture = null

[node name="CollisionShape2D" parent="Stations/Station3/DeliveryArea" index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="AnchorPoint" parent="Stations/Station3" index="3"]
position = Vector2( -1.3092, 80.4587 )

[node name="Station4" parent="Stations" instance=ExtResource( 13 )]
position = Vector2( -892.869, 5039.05 )
station_name = "4"

[node name="Sprite" parent="Stations/Station4" index="0"]
rotation = 1.57079
texture = ExtResource( 26 )

[node name="DeliveryArea" parent="Stations/Station4" index="1"]
position = Vector2( 0.907227, 207.396 )

[node name="Sprite" parent="Stations/Station4/DeliveryArea" index="0"]
position = Vector2( 0, 0 )
texture = null

[node name="CollisionShape2D" parent="Stations/Station4/DeliveryArea" index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="AnchorPoint" parent="Stations/Station4" index="3"]
position = Vector2( 0.472656, 175.206 )

[node name="CollisionShape2D" parent="Stations/Station4/PlayerDetectionArea" index="0"]
shape = SubResource( 2 )

[node name="Station5" parent="Stations" instance=ExtResource( 13 )]
position = Vector2( -3152.18, -807.499 )
station_name = "5"

[node name="Sprite" parent="Stations/Station5" index="0"]
rotation = 3.14159
texture = ExtResource( 27 )

[node name="DeliveryArea" parent="Stations/Station5" index="1"]
position = Vector2( -1.47375, 170.878 )

[node name="Sprite" parent="Stations/Station5/DeliveryArea" index="0"]
texture = null

[node name="CollisionShape2D" parent="Stations/Station5/DeliveryArea" index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="AnchorPoint" parent="Stations/Station5" index="3"]
position = Vector2( -0.321045, 139.128 )

[node name="CollisionShape2D" parent="Stations/Station5/PlayerDetectionArea" index="0"]
shape = SubResource( 2 )

[node name="Planets" type="Node2D" parent="."]

[node name="Earth" parent="Planets" instance=ExtResource( 14 )]
position = Vector2( 640.763, 351.495 )
rotation = -2.08819
planet_name = "earth"

[node name="Sprite" parent="Planets/Earth" index="0"]
texture = ExtResource( 15 )

[node name="Mars" parent="Planets" instance=ExtResource( 14 )]
position = Vector2( -581.857, -48 )
rotation = -2.54446
planet_name = "mars"

[node name="Sprite" parent="Planets/Mars" index="0"]
texture = ExtResource( 16 )

[node name="HitEmitter" type="Node2D" parent="."]
script = ExtResource( 21 )

[node name="IGPS" parent="." instance=ExtResource( 24 )]
position = Vector2( -890.734, 1904.85 )

[editable path="Stations/Station"]
[editable path="Stations/Station2"]
[editable path="Stations/Station3"]
[editable path="Stations/Station4"]
[editable path="Stations/Station5"]
[editable path="Planets/Earth"]
[editable path="Planets/Mars"]
